fine-tuned present subjunctive

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -452,7 +452,7 @@
                                     title="Le passé composé: Une action accomplie à un moment précis.">L’hiver
                                     dernier</span>,
                                 mes amies et moi, nous (<b title="avons décidé">décider</b>)
-                                <input type="text" pattern="avons décidé">
+                                <input type="text" class="wide" pattern="avons décidé">
                                 d’aller faire du ski.
                             </span>
 
