--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -411,7 +411,7 @@
 
                 <ol>
                     <li>
-                        <span>Après que</span>
+                        <span title="After">Après que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Après que" value="subjonctif" />subjonctif
@@ -424,7 +424,7 @@
                     </li>
 
                     <li>
-                        <span>Pourvu que</span>
+                        <span title="Provided that">Pourvu que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Pourvu que" value="subjonctif"
@@ -438,7 +438,7 @@
                     </li>
 
                     <li>
-                        <span>En attendant que</span>
+                        <span title="While we wait for">En attendant que</span>
                         <span>
                             <label>
                                 <input type="radio" name="En attendant que" value="subjonctif"
@@ -452,7 +452,7 @@
                     </li>
 
                     <li>
-                        <span>Lorsque</span>
+                        <span title="When">Lorsque</span>
                         <span>
                             <label>
                                 <input type="radio" name="Lorsque" value="subjonctif" />subjonctif
@@ -465,7 +465,7 @@
                     </li>
 
                     <li>
-                        <span>Puisque</span>
+                        <span title="Since">Puisque</span>
                         <span>
                             <label>
                                 <input type="radio" name="Puisque" value="subjonctif" />subjonctif
@@ -478,7 +478,7 @@
                     </li>
 
                     <li>
-                        <span>Bien que</span>
+                        <span title="Although">Bien que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Bien que" value="subjonctif" required="required" />subjonctif
@@ -491,7 +491,7 @@
                     </li>
 
                     <li>
-                        <span>Jusqu’à ce que</span>
+                        <span title="Until">Jusqu’à ce que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Jusqu’à ce que" value="subjonctif"
@@ -505,7 +505,7 @@
                     </li>
 
                     <li>
-                        <span>Pendant que</span>
+                        <span title="While">Pendant que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Pendant que" value="subjonctif" />subjonctif
@@ -518,7 +518,7 @@
                     </li>
 
                     <li>
-                        <span>Aussitôt que</span>
+                        <span title="As soon as">Aussitôt que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Aussitôt que" value="subjonctif" />subjonctif
@@ -532,7 +532,7 @@
                     </li>
 
                     <li>
-                        <span>Malgré que</span>
+                        <span title="Despite">Malgré que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Malgré que" value="subjonctif"
@@ -546,7 +546,7 @@
                     </li>
 
                     <li>
-                        <span>Dès que</span>
+                        <span title="As soon as">Dès que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Dès que" value="subjonctif" />subjonctif
@@ -559,7 +559,7 @@
                     </li>
 
                     <li>
-                        <span>Comme</span>
+                        <span title="As">Comme</span>
                         <span>
                             <label>
                                 <input type="radio" name="Comme" value="subjonctif" />subjonctif
@@ -572,7 +572,7 @@
                     </li>
 
                     <li>
-                        <span>Sans que</span>
+                        <span title="Without">Sans que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Sans que" value="subjonctif" required="required" />subjonctif
@@ -585,7 +585,7 @@
                     </li>
 
                     <li>
-                        <span>Avant que</span>
+                        <span title="Before">Avant que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Avant que" value="subjonctif" required="required" />subjonctif
@@ -598,7 +598,7 @@
                     </li>
 
                     <li>
-                        <span>Parce que</span>
+                        <span title="Because">Parce que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Parce que" value="subjonctif" />subjonctif
@@ -611,7 +611,7 @@
                     </li>
 
                     <li>
-                        <span>Afin que</span>
+                        <span title="So that">Afin que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Afin que" value="subjonctif" required="required" />subjonctif
@@ -624,7 +624,7 @@
                     </li>
 
                     <li>
-                        <span>Peut-être que</span>
+                        <span title="Perhaps">Peut-être que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Peut-être que" value="subjonctif" />subjonctif
@@ -638,7 +638,7 @@
                     </li>
 
                     <li>
-                        <span>Pour que</span>
+                        <span title="So that">Pour que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Pour que" value="subjonctif" required="required" />subjonctif
@@ -651,7 +651,7 @@
                     </li>
 
                     <li>
-                        <span>Depuis que</span>
+                        <span title="Since">Depuis que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Depuis que" value="subjonctif" />subjonctif
@@ -664,7 +664,7 @@
                     </li>
 
                     <li>
-                        <span>À moins que</span>
+                        <span title="Unless">À moins que</span>
                         <span>
                             <label>
                                 <input type="radio" name="À moins que" value="subjonctif"
