fine-tuned present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -147,11 +147,11 @@
                                 pattern="Elles seront à la soirée à la condition qu'on leur permette d'entrer[.]?"></span>
                     </li>
                     <li>
-                        <span title="Ils nous visiteront à la condition que nous ne soyons pas  partis en Europe.">
-                            Ils nous visiteront si nous ne sommes pas partis en Europe.
+                        <span title="Ils nous visiteront à la condition que nous soyons à la maison.">
+                            Ils nous visiteront si nous sommes à la maison.
                         </span>
                         <span><input type="text"
-                                pattern="Ils nous visiteront à la condition que nous ne soyons pas partis en Europe[.]?"></span>
+                                pattern="Ils nous visiteront à la condition que nous soyons à la maison[.]?"></span>
                     </li>
                     <li>
                         <span title="Il réussira à garder son emploi à la condition qu'il travaille davantage.">
