added grammaire explanation to present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -304,10 +304,12 @@
                                 <input type="radio" name="Il semble que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon"
+                            title="Il semble que = impression, apparence, incertitude → donc subjonctif, car on exprime une opinion subjective, non un fait certain.">&#128712;</span>
                     </li>
 
                     <li>
-                        <span>Je tiens à ce que</span>
+                        <span title="I want to make sure that">Je tiens à ce que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Je tiens à ce que" value="subjonctif"
@@ -332,6 +334,9 @@
                                     required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="« Il paraît que » sert à rapporter une information ou une rumeur.
+- Le locuteur ne doute pas de ce qu’il rapporte, il transmet simplement ce qu’il a entendu.
+- Donc on utilise l’indicatif, jamais le subjonctif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -346,6 +351,12 @@
                                 <input type="radio" name="Il est temps que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="« il est temps que » exprime :
+- une nécessité,
+- une action attendue,
+- quelque chose qui doit enfin se produire,
+- mais qui n’est pas encore réalisé.
+Or, en français, toute action non réalisée, souhaitée, attendue → subjonctif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -360,6 +371,9 @@
                                     required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon"
+                            title="opinion personnelle → INDICATIF.
+Quand le locuteur exprime sa perception, son jugement personnel, le français utilise l’indicatif, car il s’agit d’une appréciation subjective mais assumée.">&#128712;</span>
                     </li>
 
                     <li>
@@ -374,6 +388,11 @@
                                     required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="« Être persuadé que » exprime une certitude forte, tout comme :
+- être sûr que
+- être certain que
+- être convaincu que
+Les verbes de certitude → INDICATIF.">&#128712;</span>
                     </li>
 
                     <li>
@@ -462,6 +481,11 @@
                                 <input type="radio" name="Lorsque" value="indicatif" required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="INDICATIF parce que « lorsque » exprime un fait réel, un moment dans le temps :
+- au présent
+- au futur
+- au passé
+→ jamais d’hypothèse ni d’incertitude.">&#128712;</span>
                     </li>
 
                     <li>
@@ -488,6 +512,10 @@
                                 <input type="radio" name="Bien que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="BIEN QUE = SUBJONCTIF, car cette conjonction exprime la concession, c’est-à-dire un fait admis mais qui ne suffit pas à empêcher un autre fait.
+Elle signifie :
+- même si (mais plus formel)
+- malgré le fait que">&#128712;</span>
                     </li>
 
                     <li>
@@ -515,6 +543,8 @@
                                 <input type="radio" name="Pendant que" value="indicatif" required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="PENDANT QUE = INDICATIF, car cette conjonction exprime deux actions réelles qui se déroulent en même temps.
+Il n’y a ni hypothèse ni incertitude, donc le subjonctif n’a aucune place ici.">&#128712;</span>
                     </li>
 
                     <li>
@@ -529,6 +559,8 @@
                                     required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="AUSSITÔT QUE = INDICATIF, parce que cette conjonction exprime un fait réel, qui se produit immédiatement après un autre.
+Cela introduit une relation temporelle certaine, jamais hypothétique → donc indicatif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -556,6 +588,8 @@
                                 <input type="radio" name="Dès que" value="indicatif" required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="DÈS QUE = INDICATIF, car cette conjonction indique le moment précis où une action commence.
+C’est un fait certain dans le temps → indicatif obligatoire.">&#128712;</span>
                     </li>
 
                     <li>
@@ -569,6 +603,8 @@
                                 <input type="radio" name="Comme" value="indicatif" required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="Comme = « puisque », cause certaine → INDICATIF
+Quand « comme » exprime une cause évidente ou connue, on utilise l’indicatif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -621,6 +657,8 @@
                                 <input type="radio" name="Afin que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="AFIN QUE = SUBJONCTIF, car cette conjonction exprime un but ou une finalité, c’est-à-dire ce que l’on souhaite ou ce que l’on veut voir se réaliser.
+Elle est synonyme de : pour que">&#128712;</span>
                     </li>
 
                     <li>
@@ -635,6 +673,9 @@
                                     required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="Même si « peut-être » exprime une incertitude, la tournure « peut-être que » introduit simplement une phrase déclarative, et le français standard n’utilise pas le subjonctif ici.
+- Elle signifie : il est possible que… / on suppose que…
+- On rapporte une éventualité, mais la phrase reste au mode indicatif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -648,6 +689,8 @@
                                 <input type="radio" name="Pour que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="POUR QUE = SUBJONCTIF, car cette conjonction exprime un but, une finalité : ce que l’on souhaite ou veut faire arriver.
+- Synonyme : afin que">&#128712;</span>
                     </li>
 
                     <li>
