added more grammar explanations to present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -248,6 +248,8 @@
                                 <input type="radio" name="Il est désolé que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon"
+                            title="L’expression exprime un sentiment (tristesse, regret), et toutes les expressions de sentiment exigent le subjonctif en français.">&#128712;</span>
                     </li>
 
                     <li>
@@ -407,6 +409,8 @@ Les verbes de certitude → INDICATIF.">&#128712;</span>
                                     required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon"
+                            title="l’INDICATIF parce que c'est absence de doute = certitude.">&#128712;</span>
                     </li>
 
                     <li>
