added grammair explanation to concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -670,8 +670,24 @@ Si plus-que-parfait: on raconte que tout était déjà fait avant un autre évé
 
                             L’autobus (<b title="était">être</b>)
                             <input type="text" pattern="était">
-                            plein de garçons et de filles que je (<b title="ne connaissais pas">ne pas connaître</b>)
-                            <input type="text" class="wide" pattern="ne connaissais pas">
+                            <span class="sentence-with-hint">
+                                plein de
+                                <span class="hint" title="L’imparfait sert pour :
+- une description
+- une situation en cours
+- un état (physique, mental, relationnel…)
+- quelque chose qui n’a pas de limite précise dans le passé
+Ne pas connaître quelqu’un = un état, pas un événement.
+
+La phrase est une description globale : imparfait obligatoire
+→ L’autobus était plein
+→ Je ne connaissais pas ces gens
+Les deux verbes sont des descriptions simultanées dans le passé → donc imparfait.
+">
+                                    garçons et de filles</span> que je (<b title="ne connaissais pas">ne pas
+                                    connaître</b>)
+                                <input type="text" class="wide" pattern="ne connaissais pas">
+                            </span>
                             .
 
                             <span class="sentence-with-hint">
