fine-tuning present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -182,7 +182,7 @@
 
                 <ol>
                     <li>
-                        <span>Il vaut mieux que</span>
+                        <span title="It is better that">Il vaut mieux que</span>
                         <span>
                             <label>
                                 <input type="radio" name="Il vaut mieux que" value="subjonctif"
@@ -193,6 +193,8 @@
                                 <input type="radio" name="Il vaut mieux que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="« il vaut mieux que » ne décrit pas un fait certain, mais une appréciation subjective : ce serait préférable, souhaitable.
+Et toutes les structures de jugement, conseil, volonté, préférence → subjonctif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -294,6 +296,11 @@
                                 <input type="radio" name="Je tiens à ce que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="Parce que tenir à ce que exprime :
+- un désir,
+- une volonté,
+- une insistance personnelle.
+Toutes ces notions déclenchent automatiquement le subjonctif.">&#128712;</span>
                     </li>
 
                     <li>
