fine-tuned present subjunctive

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -483,7 +483,7 @@ Si plus-que-parfait: on raconte que tout était déjà fait avant un autre évé
                             Nous (<b title="ne pouvions pas|n'avons pas pu">ne pouvoir pas</b>)
                             <input type="text" class="wide" pattern="ne pouvions pas|n'avons pas pu">
                             jouer beaucoup et plusieurs voisins (<b title="ne sont pas venus">ne venir pas</b>)
-                            <input type="text" class="wide" pattern="ne sont pas venus">
+                            <input type="text" class="extra-wide" pattern="ne sont pas venus">
                             .
 
                             <span class="sentence-with-hint">
