--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -547,17 +547,20 @@ Cela introduit une relation temporelle certaine, jamais hypothétique → donc i
                     </li>
 
                     <li>
-                        <span title="Despite">Malgré que</span>
+                        <span title="Despite the fact that">Malgré le fait que</span>
                         <span>
                             <label>
-                                <input type="radio" name="Malgré que" value="subjonctif"
+                                <input type="radio" name="Malgré le fait que" value="subjonctif"
                                     required="required" />subjonctif
                             </label>
 
                             <label>
-                                <input type="radio" name="Malgré que" value="indicatif" />indicatif
+                                <input type="radio" name="Malgré le fait que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon"
+                            title="- Elle exprime une concession : une action qui se produit malgré une autre réalité.
+- Comme toute concession exprimant une action incertaine ou non réalisée, elle déclenche le subjonctif.">&#128712;</span>
                     </li>
 
                     <li>
