added more examples for present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -208,6 +208,9 @@ Et toutes les structures de jugement, conseil, volonté, préférence → subjon
                                 <input type="radio" name="On dit que " value="indicatif" required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="- « On dit que » rapporte une information ou une opinion rapportée par d’autres.
+- Le locuteur ne met pas en doute la phrase ; il transmet une affirmation.
+- Donc le verbe de la subordonnée est à l’indicatif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -238,6 +241,8 @@ Et toutes les structures de jugement, conseil, volonté, préférence → subjon
                                     required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="- « Trouver que » exprime une opinion, un jugement considéré comme certain par le locuteur.
+- Comme pour toutes les opinions affirmées : indicatif obligatoire.">&#128712;</span>
                     </li>
 
                     <li>
@@ -252,6 +257,8 @@ Et toutes les structures de jugement, conseil, volonté, préférence → subjon
                                     required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="- « Il est sûr que » exprime une certitude, un fait considéré comme vrai ou certain par le locuteur.
+- Toutes les expressions de certitude → indicatif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -266,6 +273,8 @@ Et toutes les structures de jugement, conseil, volonté, préférence → subjon
                                 <input type="radio" name="J’ai hâte que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="- « J’ai hâte que » exprime un sentiment de désir ou d’impatience à propos d’un événement futur.
+- Comme toutes les expressions de sentiment ou volonté, elle déclenche le subjonctif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -404,7 +413,82 @@ Les verbes de certitude → INDICATIF.">&#128712;</span>
                                 <input type="radio" name="Elle aime que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="« Elle aime que » exprime :
+- une valeur subjective,
+- un sentiment personnel,
+- une appréciation.
+Tous les verbes de sentiment → subjonctif.">&#128712;</span>
                     </li>
+
+                    <li>
+                        <span>J’espère que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="J’espère que" value="subjonctif" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="J’espère que" value="indicatif"
+                                    required="required" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="- Espérer exprime une attente positive considérée comme probable.
+- En français, un fait attendu comme probable → indicatif.">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Je souhaite que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Je souhaite que" value="subjonctif"
+                                    required="required" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je souhaite que" value="indicatif" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon"
+                            title="La structure souhaiter que exprime une volonté, un désir → subjonctif obligatoire.">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Je crois que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Je crois que" value="subjonctif" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je crois que" value="indicatif"
+                                    required="required" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon"
+                            title="Je crois que exprime :
+- une opinion,
+- une croyance personnelle,
+- une probabilité forte,
+- quelque chose que le locuteur considère comme plutôt vrai.
+Quand on considère l’information comme réelle ou probable, le français utilise l’indicatif, le mode du réel.">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Je pense que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Je pense que" value="subjonctif" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je pense que" value="indicatif"
+                                    required="required" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="« Je pense que » exprime une opinion considérée comme probable, rationnelle, raisonnable.
+- L’indicatif est le mode de la réalité, du probable, du certain.">&#128712;</span>
+                    </li>
+
                 </ol>
             </section>
 
