added another example to present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -489,6 +489,23 @@ Quand on considère l’information comme réelle ou probable, le français util
 - L’indicatif est le mode de la réalité, du probable, du certain.">&#128712;</span>
                     </li>
 
+                    <li>
+                        <span>J’ai peur que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="J’ai peur que" value="subjonctif" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="J’ai peur que" value="indicatif"
+                                    required="required" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon"
+                            title="« J’ai peur que » exprime un sentiment de crainte, d’inquiétude ou de peur.
+- Comme toutes les expressions de sentiment ou émotion qui concernent une action incertaine ou future, elle déclenche le subjonctif.">&#128712;</span>
+                    </li>
+
                 </ol>
             </section>
 
