fine-tuned present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -493,12 +493,12 @@ Quand on considère l’information comme réelle ou probable, le français util
                         <span>J’ai peur que</span>
                         <span>
                             <label>
-                                <input type="radio" name="J’ai peur que" value="subjonctif" />subjonctif
+                                <input type="radio" name="J’ai peur que" value="subjonctif"
+                                    required="required" />subjonctif
                             </label>
 
                             <label>
-                                <input type="radio" name="J’ai peur que" value="indicatif"
-                                    required="required" />indicatif
+                                <input type="radio" name="J’ai peur que" value="indicatif" />indicatif
                             </label>
                         </span>
                         <span class="info-icon"
