added grammar explanations to present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -552,6 +552,8 @@ Quand on considère l’information comme réelle ou probable, le français util
                                 <input type="radio" name="En attendant que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="« En attendant que » exprime l’attente d’un événement futur, incertain ou pas encore réalisé.
+→ Comme toute action future après une conjonction de temps, cela demande le subjonctif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -705,6 +707,8 @@ Quand « comme » exprime une cause évidente ou connue, on utilise l’indicati
                                 <input type="radio" name="Sans que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="- Sans que = conjonction introduisant une action qui ne se réalise pas ou une condition négative.
+- Toute action non réalisée, empêchée ou hypothétique → subjonctif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -718,6 +722,8 @@ Quand « comme » exprime une cause évidente ou connue, on utilise l’indicati
                                 <input type="radio" name="Avant que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="Cette conjonction introduit une action qui n’est pas encore réalisée, 
+toujours future par rapport à la principale → subjonctif obligatoire.">&#128712;</span>
                     </li>
 
                     <li>
